tests/transpiler/x/rs/match_expr.error
rustc: exit status 1
error[E0308]: mismatched types
 --> /workspace/mochi/tests/transpiler/x/rs/match_expr.rs:4:25
  |
4 |     let label: String = match x { 1 => "one", 2 => "two", 3 => "three", _ => "unknown", }.clone();
  |                ------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-----^^
  |                |        |                                                                 |
  |                |        |                                                                 help: try using a conversion method: `to_string`
  |                |        expected `String`, found `&str`
  |                expected due to this

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
