tests/transpiler/x/rs/match_expr.rs
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:06 +0700
fn main() {
    let x: i64 = 2;
    let label: String = match x { 1 => "one", 2 => "two", 3 => "three", _ => "unknown", }.clone();
    println!("{}", label);
}
